--- a/views/account/account.html
+++ b/views/account/account.html
@@ -1,3 +1,5 @@
-<div>
-    {{username}}
+<h1>Dear {{username}}, this is your account page</h1>
+
+<div class="input-group col-xs-12 center">
+    <a class="btn btn-lg btn-info topbot-margins" ui-sref="fileList">Show my files</a>
 </div>
