--- a/views/dbxauth/dbxauth.html
+++ b/views/dbxauth/dbxauth.html
@@ -1,5 +1,7 @@
 <h1 class="cover-heading">Hello, {{username}}!</h1>
 <h3>Enter your appkey and appsecret</h3>
+j531iwftar0dgwy
+84b46vtt7xcqjdk
 <div class="input-group col-xs-12 center">
     <input type="text" class="form-control topbot-margins" maxlength="40" placeholder="appkey" ng-model="appkey">
     <input type="text" class="form-control topbot-margins"  maxlength="40" placeholder="appsecret" ng-model="appsecret">
