--- a/views/dbxauth/authkey.html
+++ b/views/dbxauth/authkey.html
@@ -1,5 +1,5 @@
 <h1 class="cover-heading">Enter the code from your dropbox account:</h1>
-<div class="input-group col-xs-12 center">
+<div class="input-group center">
     <input type="text" class="form-control topbot-margins" placeholder="authkey" ng-model="authkey">
 
     <div class="btn btn-lg btn-success topbot-margins" ng-click="enterAuthKey(authkey)">Submit</div>
