--- a/views/create/create.html
+++ b/views/create/create.html
@@ -1,5 +1,5 @@
 <h1 class="cover-heading">Create your account now</h1>
-<div class="input-group col-xs-12 center">
+<div class="input-group center">
     <input type="text" class="form-control topbot-margins {{creationError}}" maxlength="40" placeholder="Your username" ng-model="username">
     <input type="password" class="form-control topbot-margins"  maxlength="40" placeholder="Your password" ng-model="password">
 
