--- a/views/filelist/filelist.html
+++ b/views/filelist/filelist.html
@@ -1,5 +1,8 @@
-<div class="input-group col-xs-12 center">
-    <div ng-repeat="name in filenames">
-        {{name}}
-    </div>
+<div class="center">
+    <table class="table table-hover filelist">
+        <tr ng-repeat="filename in filenames" id="filelist-row">
+            <td>{{ filename }}</td>
+            <td><a href='{{host + "/download/" + filename + "?token=" + token}}' class="download">Download</a></td>
+        </tr>
+    </table>
 </div>
