--- a/views/create/create.html
+++ b/views/create/create.html
@@ -5,3 +5,4 @@
 
     <div class="btn btn-lg {{btninfo}} topbot-margins" ng-click="createAccount(username, password)">Create account: {{username}}</div>
 </div>
+<a href="#/login" class="btn btn-info">Login</a>
